# harness-cli

./: .gitignore  Cargo.toml  README.md  install.sh  models.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: package.json  vercel.json
docs/content/docs/: index.mdx  meta.json
docs/content/docs/agents/: claude.mdx  codex.mdx  cursor.mdx  index.mdx  meta.json  opencode.mdx
docs/content/docs/configuration/: harness-toml.mdx  meta.json  model-registry.mdx
docs/content/docs/getting-started/: installation.mdx  quick-start.mdx
docs/content/docs/reference/: architecture.mdx  cli.mdx  events.mdx  meta.json
docs/src/app/api/models/: route.ts
docs/src/app/llms.txt/: route.ts
docs/src/lib/: layout.shared.tsx  source.ts
scripts/: sync-model-registry-docs.sh
src/: config.rs  error.rs  event.rs  lib.rs  logger.rs  main.rs  models.rs  normalize.rs  process.rs  registry.rs  runner.rs  settings.rs
src/agents/: claude.rs  codex.rs  cursor.rs  mod.rs  opencode.rs
tests/: cli.rs  config.rs  event_serde.rs  models.rs  parser_edge_cases.rs  robustness.rs  stream_integration.rs
